--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -5,3 +5,6 @@ security:
 management:
   security:
     enabled: true # turn off securing the actuator endpoints
+
+greeting:
+  displayMyName: true
