--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -6,5 +6,4 @@ management:
   security:
     enabled: true # turn off securing the actuator endpoints
 
-greeting:
-  displayMyName: true
+greeting:Hello, 
