--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -1,6 +1,6 @@
 security:
   basic:
-    enabled: true # turn off securing our application endpoints
+    enabled: false # turn off securing our application endpoints
 
 management:
   security:
